Introduction to software design

--- a/Coursera/University of Alberta/Software Design and Architecture/Object-Oriented Design/Week 1/1. Introduction to Software Design and Architecture.ipynb
+++ b/Coursera/University of Alberta/Software Design and Architecture/Object-Oriented Design/Week 1/1. Introduction to Software Design and Architecture.ipynb
@@ -163,11 +163,99 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Competing Qualities and Trade-offs\n",
+    "\n",
+    "As you design software to satisfy requirements, you have to make many important decisions. Certain design decisions involve trade-offs in different quality attributes such as performance, convenience and security. Think about balancing such qualities when designing a front door to a house. You want to make your home more secure in the most direct way. So, you decide to add locks. You add a single lock and don't feel very secure. It's easy to open and close the door very quickly. So, you continue to add extra security. You keep adding locks until you realize it's very time consuming and inconvenient to unlock your door. Instead of mindlessly adding locks, you must come up with a design that balances security with both convenience and performance in mind. \n",
+    "\n",
+    "When designing software, it is important to consider how qualities can compete in a proposed solution under different situations and determine a suitable compromise. This is a constant balancing act for a software architect. Let's talk to an expert about how competing qualities constantly influence their implementations. \n",
+    "\n",
+    "**Question: What qualities do you often balance in designing software?**\n",
+    "\n",
+    "> [Greg Coulomb] Yeah, there's always a lot of competing concerns with software design and I think, obviously, from a product perspective, you have things like usability and performance. Obviously, those are are critical. Scalability is always important. Where the trade-offs really seem to be important is when it comes to security, code quality, time to market. These kinds of things where everybody wants and you need to be secure, right? And you need to have high quality. But the pressure that you have from product, to get something out the door, is sometimes at odds with those requirements. And *as an architect, its your job to fight for those things and to advocate for them in the context of the business*. So, it's not slavishly sticking to a point and to the point that you're damaging your business, but it's about advocating responsibly for the quality of the code base that you're producing. So, I think if I would summarize, quality is the job of the architect. You're ensuring the quality of the code base and you're trading that off against lots of things all the time.\n",
+    "> \n",
+    "> Architecture is about producing a quality product and you have to define what quality is. That's what architecture is, right? It is that you're defining what are those quality attributes that you're chasing after. And you're going to deal with performance, you're going to deal with scalability, you're going to deal with maintainability, security, all that stuff. Also, you want your job to advocate for that quality for all of the stakeholders, right? Engineers need quality, customers need quality, the business needs quality. So, I think overall, I mean you're always bouncing a lot of things. Architecture is all about balancing competing concerns. But if I boil it down to the most important, it's you're balancing quality versus time to market. Right? So, as customers, as businesses, we want to get things into market. We want to start making money off of them or serving our customers or whatever it might be. And as engineers, we have a tendency to say we want it to be perfect. We want it to be 100% code coverage. We want it to be tested every way possible. It's got to support as much load as you could ever possibly throw at it. But the reality is there's always a trade-off there. And so, as an architect, you have to be able to establish what is good enough, right? What are the non-negotiables? What must you do? And then, what can you negotiate on? And once you establish that as an architect, you've made a really good job of establishing those guardrails and then the team can execute from there. The business and the engineering team can execute from there. \n",
+    "\n",
+    "**Context** is important to determine what choice of solution is right for the balance of qualities. For example, a home located in a low crime area will require different security needs from one located in a high crime area. For software, talking to its stakeholders will help you to understand the context. Sometimes choices made in your software designs can have unintended consequences. For example, an idea that seems to work fine for a relatively small amount of data may become impractical if there is a need to deal with a lot more data. It's good to get other perspectives on your technical designs for a more rounded implementation. These perspectives can be in the form of asking other developers for their opinion or having a design review session. In the home example, you may decide to install bars on the window of a house built in high crime neighborhood. However, the bars might have the unintended consequence of preventing an escape through the windows in case of fire. These consequences could have been avoided if a fire marshal's perspective had been considered before implementation. \n",
+    "\n",
+    "Besides design reviews, it is worthwhile to slow down while implementing a system and test it carefully. You can prototype alternative ideas and run tests to see what works best. If a design decision has unintended consequences, tests can help to catch them. In the same way for the home example, running an emergency escape drill would detect the bars as impeding a fast escape. \n",
+    "\n",
+    "Let's see how various qualities arise which influence your software design. For software, there are *functional requirements*. \n",
+    "\n",
+    "> **Functional requirements** describe what the system or application is expected to do. \n",
+    "\n",
+    "For example, a media app has a functional requirement of being able to download a full length movie. Naturally, a software design needs to outline a solution to meet such requirements correctly. So, a key quality to satisfy is simply correctness. Besides functional requirements, there are also *non-functional requirements*. \n",
+    "\n",
+    "> **Non-functional requirements** specify how well the system or application does what it does. Such requirements may describe how well the software runs in particular situations. \n",
+    "\n",
+    "For example, the media app can have non-functional requirements to download a full length movie at a specific speed and to play such a movie within a certain memory limit. Beyond *correctness*, other qualities to satisfy include *performance*, *resource usage* and *efficiency*, in terms that can be measured from the running software. \n",
+    "\n",
+    "Both functional and non-functional requirements are important to satisfy. You'll need to discuss what is acceptable with the stakeholders. The desired qualities will put constraints on your system's design. Consider an analogy involving categories of cars. Both *sports cars* and *popular cars* meet the functional requirement of providing transportation. But each category, indeed each model of car, offers a different balance of achieved non-functional requirements with different factors like *acceleration*, *handling*, *cargo capacity*, *weight* and *fuel economy*. \n",
+    "\n",
+    "<img src=\"images/cars.svg\" width=\"60%\"/>\n",
+    "\n",
+    "Another kind of non-functional requirement concerns how well the code of the software can evolve. For example, parts of the implementation may have to support use in other similar software products. Also, the implementation may have to allow for future changes. So, other qualities to satisfy for the software can include *re-usability*, *flexibility* and *maintainability*. \n",
+    "\n",
+    "As the design gets detailed and the implementation is constructed, the required quality should be verified through techniques like *reviews* and *tests*. As well, certain qualities can be validated with *feedback from end users*. \n",
+    "\n",
+    "You need to keep many qualities in mind when designing software. It's not enough to write any code you want if it works to meet the desired functional requirements. There are multiple perspectives to consider. You must satisfy qualities that matter to the users of the software, as well as those for its developers. In software design, your starting point is ensuring your software structure suits the balance of qualities desired. How the structure is organized may affect the performance as seen by the users, as well as the re-usability and maintainability as seen by the developers. In particular, there is a common trade-off between performance and maintainability. High performance code may be less clear and less modular making it less maintainable. Another trade-off is security and performance. The extra overhead for high security may reduce performance. Extra code for backward compatibility can worsen both performance and maintainability. Achieving the extremes in such competing qualities can, in a way, pit users against developers or users against other users. Generally, you have to strike a balance during design. You should ask how much performance, maintainability, security or backward compatibility is needed. Can you cut back on performance to gain more security? Can you drop some backward compatibility to have better performance? \n",
+    "\n",
+    "Finally project realities will impose compromises on your design. You must balance the software qualities with the resources you have to develop your product. Thinking about quality attributes gives a broader view on how you can achieve the desired requirements in your design. You now understand these qualities as competing ideals that must be balanced. When asked to satisfy a quality, you will consider multiple perspectives and look for potential trade-offs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Record, Organize, and Refine Components\n",
+    "\n",
+    "**Note cards** are often used when planning a speech. You can represent each of your talking points on a card. The speech only makes sense if you ordered the cards in a way that you move logically from one talking point to the next. It would be nice if we had something similar to map out the structure of the software logically when forming its design. The good news is we do. You identify *components*, *connections* and *responsibilities* from some requirements when forming the conceptual design. This is where you give your initial thoughts on how you might satisfy the requirements. \n",
+    "\n",
+    "In the technical design, you learned how these components and connections are further refined to give them technical details. This makes them easier to implement. \n",
+    "\n",
+    "<img src=\"images/conceptual_design.svg\" width=\"70%\"/>\n",
+    "\n",
+    "Although identifying components, their responsibilities and connections, is a good first step in software design, we haven't yet demonstrated a way of representing them. Being able to play with our design, like reordering note cards and speech planning would be valuable. In this lesson, you will learn about an important technique for representing this information at a high level when forming the conceptual design. This technique uses **CRC cards** where CRC stands for **Class, Responsibility, Collaborator**. \n",
+    "\n",
+    "Similar to how note cards help you organize your talking points, CRC cards help you to organize your components into classes, identify the responsibilities and determine how they will collaborate with each other. To learn about CRC cards in a software design, let's have a mini software system we can play with. Consider a bank machine, for instance. You insert your bank card into the bank machine, the bank machine will then ask you to enter a PIN authenticating you for access. After that, you can choose to deposit, withdraw or check your balances. This scenario suggests the basic requirements for the system. Admittedly, it is an incomplete set of requirements but it's a good start. Remember that requirements are often incomplete and are resolved with further interactions with your client and end users. The next step is to design the bank machine. But as we form the conceptual design beyond just identifying *components*, their *responsibilities* and *connections*, we are going to represent them with our new technique, the CRC card. \n",
+    "\n",
+    "Much like how note cards are used to organize your talking points, CRC cards are used to record, organize and refine the components in your design. Again, CRC stands for **Class**, **Responsibility** and **Collaborator**. A CRC card has three sections. The top of the card has the class name. On the left are the responsibilities of the class, and on the right, you list collaborators.\n",
+    "\n",
+    "<img src=\"images/crc_cards.svg\" width=\"25%\"/>\n",
+    "\n",
+    "**Collaborators** are other classes that the class interacts with to fulfill its responsibilities. So, how can we use this while forming the conceptual design? To keep track of each candidate component and its responsibilities using a CRC card, you place a *component's name* in the class name section and the *responsibilities* in the **responsibilities** section. So, what about the connections? In the **collaborators** section, you list other components that your current component connects to or interacts with to fulfill its responsibilities. \n",
+    "\n",
+    "A CRC card can be as simple as a physical index card marked into three sections. They are cheap, editable and widely available. CRC cards are small on purpose, so you can't write much on them. This forces you to keep breaking down each component into smaller components and eventually, classes that are small enough to be individually described on index cards. \n",
+    "\n",
+    "Now that you've learned about CRC cards, let's use them to design our bank machine system. Let us begin with a basic user component. In this example, our primary user would be a *Bank Customer* that would go on our first CRC card. We place bank customer in the class name section. The bank customer's responsibilities are *insert a bank card* or *choose an operation*, such as *deposit*, *withdraw* or *check account balance*. Let's list these in the responsibility section of the CRC card. I'd go with *insert bank card* and *choose operation*, but write a description that makes sense for you. All of these bank customer responsibilities involve a *bank machine*. The customer can insert bank card in the machine and choose an operation. Since the bank machine is required for our bank customer component to fulfill its task, we placed *bank machine* under the *collaborators* section of the bank customer card. \n",
+    "\n",
+    "<img src=\"images/crc_customer.svg\" width=\"25%\"/>\n",
+    "\n",
+    "Next, let's do the other component, the *bank machine* on another CRC card. We write *Bank Machine* in the class name section. The machine's responsibilities include *authenticate bank customer*, *display task options*, *deposit, withdraw and check balances*. And since this card interacts with the bank customer component, add *Bank Customer* to the collaborators section of the bank machine card. \n",
+    "\n",
+    "<img src=\"images/crc_machine.svg\" width=\"40%\"/>\n",
+    "\n",
+    "As we have said, a key advantage of using CRC cards is that it allows you to physically reorganize your design. You can move related cards together or situate cards to suggest relationships. With our CRC cards, we can organize things by placing collaborating components together. For example, put the bank customer CRC card on the left and the bank machine CRC card on the right. Where CRC cards organized, you can simulate a prototype design of the system so far. \n",
+    "\n",
+    "<img src=\"images/crc_both.svg\" width=\"70%\"/>\n",
+    "\n",
+    "Now, let's consider the scenario of the bank machine authenticating our bank customer. You can imagine enacting our bank customer's insert card responsibility. This in turn, collaborates with the bank machine and triggers its responsibility to authenticate the bank customer. Once authenticated, the bank machine enacts its responsibility to display the task options. Here is where CRC cards shine. They are cheap, editable and disposable, so you are encouraged to experiment and play with alternative designs. \n",
+    "\n",
+    "In the simulation we just did, you might ask, how does a bank machine authenticate the bank customer? This question suggests adding another component, the *Bank*, where the *Bank Machine* communicates to authenticate the *Bank Customer*.\n",
+    "\n",
+    "<img src=\"images/crc_bank.svg\" width=\"30%\"/>\n",
+    "\n",
+    "Now, you should understand how working with CRC cards can help to identify needed components in the design. You can find more candidate components by using CRC cards to prototype and simulate various scenarios. For instance, since the bank machine will talk over a network to the bank, you can add a *Network* CRC card between them. You want the network communication to be secure, so you make the network collaborate with a new component called *Encryption*. \n",
+    "\n",
+    "<img src=\"images/crc_full.svg\" width=\"50%\"/>\n",
+    "\n",
+    "This component supports secure communication with the bank. As well, you probably notice the bank machine itself contains several different components, which seem small enough to be individual classes for programming. For example, there's a *card reader*, *keypad*, *display*, *cheque slot* and *cash dispenser*. Each of these classes but their responsibilities and collaborators can be described on their own cards. \n",
+    "\n",
+    "In a design meeting with the software development team, you can have all the cards on the table and discuss a simulation of how these classes work with other classes to achieve their responsibilities. As before, these simulations may reveal shortcomings in the design and you can experiment with alternatives by introducing appropriate cards. \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
